--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
+  mobile_scanner: ^3.5.2
+  flutter_riverpod: ^2.4.5
+  intl: ^0.18.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +55,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  custom_lint: ^0.5.6
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.6
+#  riverpod_lint: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
