--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.1
   shared_preferences: ^2.2.2
+  table_calendar: ^3.0.9
 
 
 
